[package]
name = "datafusion-mongo-connector"
version = "0.1.0"
edition = "2018"

[dependencies]
mongodb = { version = "2.1" }
datafusion = { git = "https://github.com/apache/arrow-datafusion" }
arrow = { version = "6", default-features = false, features = ["prettyprint"] }
mongodb-arrow-connector = { version = "0.5" }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"

[[bin]]
name = "load_data"
path = "bin/load_data.rs"

[[bin]]
name = "nyc_query"
path = "bin/nyc_query.rs"

[profile.release]
debug = true